--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,5 +11,7 @@
         "navigationBarTextStyle": "black"
     },
     "style": "v2",
-    "sitemapLocation": "sitemap.json"
+    "sitemapLocation": "sitemap.json",
+    "plugins": {
+    }
 }
