--- a/project.config.json
+++ b/project.config.json
@@ -49,7 +49,7 @@
     },
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
-    "appid": "wxd0c536d99edac1fa",
+    "appid": "wx777efca8fbfab958",
     "condition": {},
     "libVersion": "2.21.3",
     "srcMiniprogramRoot": "miniprogram/",
