--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,7 @@
         "autoAudits": false,
         "showShadowRootInWxmlPanel": true,
         "scopeDataCheck": false,
-        "uglifyFileName": false,
+        "uglifyFileName": true,
         "checkInvalidKey": true,
         "checkSiteMap": true,
         "uploadWithSourceMap": true,
@@ -29,6 +29,7 @@
         "useMultiFrameRuntime": true,
         "useApiHook": true,
         "useApiHostProcess": true,
+        "ignoreDevUnusedFiles": false,
         "babelSetting": {
             "ignore": [],
             "disablePlugins": [],
