feat(report): 补充上报,同时优化界面呈现效果

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,7 +3,7 @@
     "projectname": "aichat-client",
     "setting": {
         "compileHotReLoad": true,
-        "urlCheck": false,
+        "urlCheck": true,
         "autoAudits": true,
         "preloadBackgroundData": false,
         "bigPackageSizeSupport": true
